--- a/styles/style.css
+++ b/styles/style.css
@@ -2,4 +2,66 @@
   padding: 0;
   margin: 0;
   font-family: 'Roboto', sans-serif;
+  color: #ccc;
+}
+
+body {
+  overflow: hidden;
+  height: 100vh;
+  display: flex;
+  flex-direction: column; 
+  justify-content: space-between;
+}
+
+.header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #232529;
+  color: #ccc;
+  font-weight: 900;
+  font-size: 56px;
+  padding: 40px;
+}
+
+.header > p {
+  text-align: center;
+}
+
+.content {
+  background-color: #282a36;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  flex-grow: 1;
+}
+
+button {
+  font-size: 100px;
+  background-color: transparent;
+  border: none;
+}
+
+button:hover {
+  text-shadow: 0 0 15px rgba(240, 240, 0.8);
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  font-weight: 550;
+  height: 50px;
+  background-color: #282a36;
+}
+
+.icon {
+  font-weight: 900;
+  font-size: 18px;
+}
+
+a {
+  text-decoration: none;
 }
