--- a/styles/style.css
+++ b/styles/style.css
@@ -32,9 +32,51 @@ body {
   background-color: #282a36;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   flex-grow: 1;
+  gap: 64px;
+}
+
+.status {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  gap: 16px;
+}
+
+.status > #who-wins {
+  font-size: 40px;
+  font-weight: 900;
+  color: #ddd;
+}
+
+.status > #info {
+  font-size: 20px;
+}
+
+.battle {
+  display: flex;
+  gap: 64px;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  gap: 32px;
+}
+
+.card > .item {
+  font-size: 100px;
+}
+
+#selection {
+  display: flex;
+  gap: 64px;
+  height: 140px;
 }
 
 button {
@@ -44,7 +86,8 @@ button {
 }
 
 button:hover {
-  text-shadow: 0 0 15px rgba(240, 240, 0.8);
+  text-shadow: 0 0 20px #a4b4f4;
+  font-size: 120px;
 }
 
 .footer {
