--- a/styles/style.css
+++ b/styles/style.css
@@ -3,11 +3,17 @@
   margin: 0;
   font-family: 'Roboto', sans-serif;
   color: #ccc;
+  box-sizing: border-box;
+}
+
+html {
+  background-color: #282a36;
+  position: relative;
+  min-height: 100%;
 }
 
 body {
   overflow: hidden;
-  height: 100vh;
   display: flex;
   flex-direction: column; 
   justify-content: space-between;
@@ -29,13 +35,10 @@ body {
 }
 
 .content {
-  background-color: #282a36;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  flex-grow: 1;
-  gap: 64px;
 }
 
 .status {
@@ -58,7 +61,7 @@ body {
 
 .battle {
   display: flex;
-  gap: 64px;
+  gap: 350px;
 }
 
 .card {
@@ -73,10 +76,16 @@ body {
   font-size: 100px;
 }
 
+.card > .wins {
+  font-size: 18px;
+  color: #aaa;
+}
+
 #selection {
   display: flex;
   gap: 64px;
   height: 140px;
+  flex-wrap: wrap;
 }
 
 button {
@@ -91,6 +100,7 @@ button:hover {
 }
 
 .footer {
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -98,6 +108,10 @@ button:hover {
   font-weight: 550;
   height: 50px;
   background-color: #282a36;
+  padding: 32px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
 }
 
 .icon {
