Arreglando error del footer comportamiento

--- a/styles/style.css
+++ b/styles/style.css
@@ -13,10 +13,9 @@ html {
 }
 
 body {
-  overflow: hidden;
+  height: 100vh;
   display: flex;
-  flex-direction: column; 
-  justify-content: space-between;
+  flex-direction: column;
 }
 
 .header {
@@ -93,7 +92,6 @@ body {
   justify-content: center;
   display: flex;
   gap: 64px;
-  height: 140px;
   flex-wrap: wrap;
 }
 
@@ -118,9 +116,7 @@ button:hover {
   height: 50px;
   background-color: #282a36;
   padding: 32px;
-  position: absolute;
-  bottom: 0;
-  left: 0;
+  margin-top: auto;
   text-align: center;
 }
 
